--- a/mobile.css
+++ b/mobile.css
@@ -4,6 +4,9 @@
     font-family: "Courier New", Courier, monospace;
     color: red;
 }
+body {
+    font-size: 1.5em;
+}
 h1 {
     font-weight: bold;
     font-size: 2em;
