--- a/mobile.css
+++ b/mobile.css
@@ -4,7 +4,7 @@
     font-family: "Courier New", Courier, monospace;
 }
 body {
-    font-size: 4em;
+    font-size: 30vw;
 }
 h1 {
     font-weight: bold;
