--- a/desktop.css
+++ b/desktop.css
@@ -4,7 +4,7 @@
     font-family: "Courier New", Courier, monospace;
 }
 body {
-    font-size: 4vh;
+    font-size: 30px;
 }
 h1 {
     font-weight: bold;
