--- a/style.css
+++ b/style.css
@@ -2,9 +2,10 @@
     margin: 0;
     padding: 0;
     font-family: "Courier New", Courier, monospace;
+    word-wrap: break-word;
 }
 body {
-    font-size: 30px;
+    font-size: 25px;
 }
 h1 {
     font-weight: bold;
@@ -15,9 +16,13 @@ sup, sub {
     font-size: 1em;
 }
 h1, p {
-    margin: 1em 10%;
+    margin: 1em auto;
     width: 80%;
 }
 a {
     color: black;
+}
+
+#logo {
+    max-width: 200px;
 }
