--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 h1 {
     font-weight: bold;
     font-size: 1.5em;
-    text-align: center;
+    /*text-align: center;*/
 }
 sup, sub {
     font-size: 1em;
