--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300&display=swap');
+
 :root {
     --foreground-color: #000000;
     --background-color: #ffffff;
@@ -5,21 +7,14 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: "Courier New", Courier, monospace;
+    font-family: 'IBM Plex Mono', monospace;
+    font-weight: 300;
     word-wrap: break-word;
 }
 body {
-    font-size: 5vmin;
+    font-size: 4.5vmin;
     background-color: var(--background-color, #ffffff);
     color: var(--foreground-color, #000000);
-}
-h1 {
-    font-weight: bold;
-    font-size: 1.5em;
-    /*text-align: center;*/
-}
-sup, sub {
-    font-size: 1em;
 }
 h1, p {
     margin: 1em auto;
